--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 user_name: seongmin # 실험자 이름
 model:
-  model_name: klue/roberta-small
+  model_name: kykim/electra-kor-base
 early_stopping:
   min_delta: 0.0
   mode: max
@@ -8,18 +8,18 @@ early_stopping:
   patience: 5
   verbose: False
 train:
-  batch_size: 10
-  learning_rate: 1e-5
-  max_epoch: 8
+  batch_size: 128
+  learning_rate: 2e-4
+  max_epoch: 10
   LossF: torch.nn.MSELoss
   optim: torch.optim.AdamW
   ## LossF와 optim은 torch.nn과 torch.optim을 꼭 적어야 합니다
   shuffle: True
 data:
   train_path: ./data/train.csv
-  dev_path: ./data/train.csv
-  test_path: ./data/train.csv
-  predict_path: ./data/train.csv
+  dev_path: ./data/dev.csv
+  test_path: ./data/dev.csv
+  predict_path: ./data/test.csv
   checkpoint_path: ./checkpoint/
   output_path: ./output/
   submission_path: ./data/sample_submission.csv
