--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,27 +1,49 @@
 user_name: seongmin # 실험자 이름
+seed: 42
 model:
-  model_name: klue/roberta-small
+  model_name: kykim/electra-kor-base
+
 early_stopping:
   min_delta: 0.0
   mode: max
-  monitor: val_pearson
-  patience: 5
+  monitor: pearson/val
+  patience: 3
   verbose: False
+
 train:
-  batch_size: 10
-  learning_rate: 1e-5
-  max_epoch: 8
+  batch_size: 32
+  learning_rate: 1e-4
+  max_epoch: 3
+  dropout : 0.2
   LossF: torch.nn.MSELoss
   optim: torch.optim.AdamW
   ## LossF와 optim은 torch.nn과 torch.optim을 꼭 적어야 합니다
   shuffle: True
+
 data:
-  train_path: ./data/train.csv
-  dev_path: ./data/train.csv
-  test_path: ./data/train.csv
-  predict_path: ./data/train.csv
+  train_path: ./data/raw/train.csv
+  dev_path: ./data/raw/dev.csv
+  test_path: ./data/raw/dev.csv
+  predict_path: ./data/raw/test.csv
   checkpoint_path: ./checkpoint/
   output_path: ./output/
-  submission_path: ./data/sample_submission.csv
-  val_path: ./data_dev.csv
-seed: 42
+  submission_path: ./data/raw/sample_submission.csv
+  val_path: ./data/raw/dev.csv
+
+# wandb log 폴더명만 입력하면 됩니다. summary 확인 용도
+wandb_log_folder: run-20240925_123934-tdu9uwzm
+
+# inference 설정
+inference:
+  model_file_name: KR-ELECTRA-discriminator_ys_0920 # model.pt의 폴더명
+  model_path:
+    path_1: ./output/3peo_v4 + yeseo(7 model).csv
+    path_2: ./output/ensemble_09_24_01_48.csv
+    path_3: ./output/ensemble.csv
+    path_3: ./output/weighted_voting_result.csv
+  model_weight: # 모델별 가중치
+    weight_1: 0.5
+    weight_2: 0.5
+    weight_3: 0.7
+    weight_4: 0.7
+  postprocessing_list: [False, False, False, False]
